<resources>
    <string name="app_name">CatchUp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="enter_your_work_hours">Enter your work hours</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="preferences">Preferences</string>
    <string name="pick_for_me">Pick For Me</string>
    <string name="invite">Invite</string>
    <string name="go">Go</string>
    <string name="search_results_header">%1$d result(s)</string>
    <string name="filler_location">"423 Juniper Ct \n Sunnyvale, CA 94086"</string>
    <string name="filler_name">Home</string>
    <string name="filler_category">brunch</string>
    <string name="filler_price">$$$</string>
    <string name="filler_rating">*****</string>
    <string name="num_reviews">%1$d reviews</string>
    <string name="num_distance">%1$.2f mi</string>
    <string name="other">Other...</string>
    <string name="map">Map View</string>
    <string name="list">List View</string>

    <string-array name="cuisineList">
        <item>American</item>
        <item>Chinese</item>
        <item>Indian</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>Mediterranean</item>
        <item>Mexican</item>
        <item>Spanish</item>
        <item>Thai</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="updatePref">Update Food Preferences</string>
    <string name="inviteFriends">Invite Friends</string>
    <string name="location">Location</string>
    <string name="price">Price</string>
    <string name="distance">Distance</string>
</resources>
