<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorOffWhite"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:id="@+id/list_item">

    <ImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/numReviews"
        android:background="@color/colorBackground"
        />

    <TextView
        android:id="@+id/name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_toEndOf="@+id/image"
        android:layout_toStartOf="@+id/distance"
        android:text="@string/filler_name"
        android:textSize="20dp"
        android:gravity="top"
        android:textColor="@color/colorBlack"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/category"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/filler_category"
        android:textColor="@color/colorGrey"
        android:layout_below="@id/name"
        android:layout_alignStart="@+id/name"
        android:layout_alignEnd="@+id/name"
        />

    <TextView
        android:id="@+id/rating"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignStart="@id/name"
        android:layout_below="@+id/category"
        android:text="@string/filler_rating"
        android:textColor="@color/gold"
        android:textSize="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="-18dp"
        />

    <TextView
        android:id="@+id/numReviews"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/num_reviews"
        android:textColor="@color/colorGrey"
        android:layout_alignStart="@+id/name"
        android:layout_below="@id/rating"
        />

    <TextView
        android:id="@+id/distance"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignTop="@+id/name"
        android:layout_alignParentEnd="true"
        android:text="@string/num_distance"
        android:textColor="@color/colorDarkGrey"
        />

    <TextView
        android:id="@+id/price"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/distance"
        android:text="@string/filler_price"
        android:textColor="@color/colorDarkGrey"
        />
</RelativeLayout>