<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_signUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.usc.cs404.catchup.SignUpActivity">

    <ImageView
        android:id="@+id/logoImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@id/editTextEmail"
        android:layout_gravity="center"
        android:src="@drawable/tomato_icon"
        android:paddingTop="64dp"
        android:paddingBottom="64dp"/>

    <TextView
        android:id="@+id/logoTxt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@id/editTextEmail"
        android:gravity="center"
        android:text="@string/app_name"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:textSize="70sp"
        android:shadowColor="@color/colorDarkBackground"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius=".01"
        android:textColor="@color/colorWhite"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorWhite"
        android:hint="@string/email"
        android:textColorHint="@color/colorGrey"
        android:textColor="@color/colorGrey"
        android:inputType = "textEmailAddress"
        android:layout_above="@id/editTextPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"/>


    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/password"
        android:textColorHint="@color/colorGrey"
        android:textColor="@color/colorGrey"
        android:background="@color/colorWhite"
        android:inputType="textPassword"
        android:layout_above="@+id/buttonSignUp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"/>

    <Button
        android:id="@+id/buttonSignUp"
        android:text="@string/sign_up"
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/buttonLogIn"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorAccent"/>

    <Button
        android:id="@+id/buttonLogIn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:foregroundGravity="center"
        android:text="@string/log_in"
        android:textColor="@color/colorAccent"
        android:fontFamily="sans-serif"
        style="@style/Widget.AppCompat.Button.Borderless"/>
</RelativeLayout>
