<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.usc.cs404.catchup.SignUpActivity">


    <ImageView
        android:id="@+id/iconImg"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="left"
        android:src="@drawable/tomato_icon"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="8dp"/>

    <EditText
        android:id="@+id/editTextSearchTerm"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/search"
        android:textColor="@color/colorGrey"
        android:textColorHint="@color/colorGrey"
        android:background="@color/colorWhite"
        android:inputType="text"
        android:layout_alignTop="@id/iconImg"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_toEndOf="@id/iconImg"
        android:layout_toStartOf="@id/ButtonSearch"
        android:fontFamily="sans-serif"/>

    <Button
        android:id="@+id/ButtonSearch"
        android:text="@string/go"
        android:textColor="@color/colorWhite"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignTop="@id/iconImg"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/colorAccent"/>

    <TextView
        android:id="@+id/textViewResultsHeader"
        android:text="@string/search_results_header"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/editTextSearchTerm"
        android:layout_alignParentStart="true"
        android:textColor = "@color/colorAccent"
        android:textSize="16sp"
        android:gravity="center"/>

    <ListView
        android:id="@+id/list_countries"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor = "@color/colorBlack"
        android:layout_below="@+id/textViewResultsHeader"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-16dp"
        android:layout_marginEnd="-16dp"
        android:divider="@color/colorGrey"/>

</RelativeLayout>
